[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Scripts/CardManager.gd" type="Script" id=1]

[node name="CardManager" type="Node2D"]
script = ExtResource( 1 )

[node name="TableCard1" type="Position2D" parent="."]
position = Vector2( 400, 120 )

[node name="TableCard2" type="Position2D" parent="."]
position = Vector2( 520, 120 )

[node name="TableCard3" type="Position2D" parent="."]
position = Vector2( 640, 120 )

[node name="TableCard4" type="Position2D" parent="."]
position = Vector2( 760, 120 )

[node name="TableCard5" type="Position2D" parent="."]
position = Vector2( 880, 120 )

[node name="PlayerCard1" type="Position2D" parent="."]
position = Vector2( 540, 480 )

[node name="PlayerCard2" type="Position2D" parent="."]
position = Vector2( 420, 480 )
